--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "colors": "^1.4.0",
     "concurrent": "^0.3.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "debug": "^4.4.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
